<resources>
    <string name="app_name">트윗지기</string>
    <string name="TweetCleaner">트윗 청소기</string>
    <string name="DeleteOption">삭제 옵션</string>
    <string name="Hetzer_PlzSelSaveTweets">지우지 않고 남겨둘 트윗을 지정하세요.</string>
    <string name="Hetzer_PlzSelDelTweets">지울 트윗을 지정하세요.</string>
    <string name="WhichTweetDoNotRemove">어떤 트윗을 남겨둘까요?</string>
    <string name="AddCondition">조건 추가</string>
    <string name="OK">확인</string>
    <string name="OnlyNumberAllowed">숫자만 입력해주세요!</string>
    <string name="Cancel">취소</string>
    <string name="Delete">삭제</string>
    <string name="TweetPulling">내 트윗 목록을 불러오는 중입니다. (현재 %1$d트윗)</string>
    <string name="TweetRemoving">트윗을 삭제하는 중입니다. (%1$d/%2$d)</string>
    <string name="Done">완료!</string>
    <string name="Hetzer_Done">조건에 맞는 트윗이 모두 삭제되었습니다.</string>
    <string name="CleanTweet">이 조건으로 실행하기</string>
    <string name="TweetCleanerDescription">조건에 맞는 트윗들을 삭제합니다.</string>
    <string name="Error">에러!</string>
    <string name="RateLimitError">트위터에서 제공하는 api 한도를 초과했습니다\n나중에 다시 시도해주세요.\n(%1$s)</string>
    <string name="AreYouSure">확실한가요?</string>
    <string name="TweetCannotRestore">삭제된 트윗은 되돌릴 수 없어요.</string>
    <string name="YesDeleteIt">네, 삭제할게요!</string>
    <string name="Wait">잠깐만요!</string>
    <string name="FriendPulling">팔로잉 목록을 가져오는 중이에요. (현재 %1$d명)</string>
    <string name="FollowerPulling">팔로워 목록을 가져오는 중이에요. (현재 %1$d명)</string>
    <string name="TweetAnalytics">트윗 일지</string>
    <string name="TweetAnalyticsDesc">트윗, 팔로우쉽 변화 추이를 봅니다.</string>
    <string name="PermissionRequestTitle">권한이 필요합니다.</string>
    <string name="Yes">네</string>
    <string name="No">아니요</string>
    <string name="Unfollow">언팔로우</string>
    <string name="ShowProfile">프로필 보기</string>
    <string name="ActionDoNotRestore">이 행동은 돌이킬 수 없어요!</string>
    <string name="JobDone">작업을 완료했습니다.</string>
    <string name="Chainblock">체인블락</string>
    <string name="ChainblockDescription">대상 유저의 모든 팔로잉과 팔로워를 블락해요.</string>
    <string name="Report_Label_TweetCount">트윗 수 : </string>
    <string name="Report_Label_FriendCount">팔로잉 수 : </string>
    <string name="Report_Label_FollowerCount">팔로워 수 : </string>
    <string name="Format_Date">yyyy년 MM월 dd일</string>
    <string name="Format_Time">aa hh시 mm분</string>
    <string name="Format_DateTime">yyyy년 MM월 dd일 hh시 mm분 ss초</string>
    <string name="NewFriends">이어진 팔로우</string>
    <string name="NoMoreFriends">끊어진 팔로우</string>
    <string name="NewFollowers">새로운 팔로워</string>
    <string name="NoMoreFollowers">사라진 팔로워</string>
    <string name="TokenManagement">로그인 관리</string>
    <string name="TokenManagementDetail">트윗일지에 로그인된 계정을 관리할 수 있어요.</string>
    <string name="AddUser">유저 추가</string>
    <string name="ScreenNameHint">타깃의 아이디는?</string>
    <string name="Follower">팔로워</string>
    <string name="Friend">팔로잉</string>
    <string name="ChainBlockWarning1">이 유저가 확실한가요?</string>
    <string name="ChainBlockWarning2">이 행동은 돌이킬 수 없어요!.\n트윗지기 앱은 이에 대하여 어떠한 책임도 지지 않아요.\n한번 더 신중히 생각해 보시길 바랄게요.</string>
    <string name="UserNotFoundError">해당 유저를 찾을 수 없었어요.</string>
    <string name="ChainBlockDone">체인블락을 완료했어요! %1$d명의 유저를 블락했어요.</string>
    <string name="UserProtected">프로텍트 설정된 유저를 대상으로 사용할 수 없어요!</string>
    <string name="BlockClear">블락 일괄 해제</string>
    <string name="BlockClearDescriptipn">내가 블락한 유저들을 전부 블락 해제해요.</string>
    <string name="Run">실행하기</string>
    <string name="FetchBlockedUsers">블락한 유저 정보를 가져오는 중이에요.</string>
    <string name="ClearBlockedUsers">블락을 해제하는 중이에요.\n(%1$d / %2$d)</string>
    <string name="BlockCleared">모든 블락을 해제했어요!.</string>
    <string name="HetzerConditions_1">내가 마음에 들어한 트윗</string>
    <string name="HetzerConditions_2">내가 마음에 들어하지 않은 트윗</string>
    <string name="HetzerConditions_3">내가 리트윗한 트윗</string>
    <string name="HetzerConditions_4">내가 리트윗하지 않은 트윗</string>
    <string name="HetzerConditions_5">%1$s회 이상 마음 받은 트윗</string>
    <string name="HetzerConditions_6">%1$s회 이하 마음 받은 트윗</string>
    <string name="HetzerConditions_7">%1$s회 이상 리트윗 받은 트윗</string>
    <string name="HetzerConditions_8">%1$s회 이하 리트윗 받은 트윗</string>
    <string name="HetzerConditions_9">미디어를 포함한 트윗"</string>
    <string name="HetzerConditions_10">미디어를 포함하지 않은 트윗</string>
    <string name="HetzerConditions_11">\'%1$s\'를 포함한 트윗</string>
    <string name="HetzerConditions_12">\'%1$s\'를 포함하지 않은 트윗</string>
    <string name="HetzerConditions_13">위치 정보를 포함한 트윗</string>
    <string name="HetzerConditions_14">위치 정보를 포함하지 않은 트윗</string>
    <string name="HetzerConditions_15">최근 %1$s개 까지의 트윗</string>
    <string name="HetzerConditions_21">최근 %1$s개 이외의 트윗</string>
    <string name="HetzerConditions_16">최근 %1$s분 이내의 트윗</string>
    <string name="HetzerConditions_22">최근 %1$s분 이외의 트윗</string>
    <string name="HetzerConditions_17">%1$s회 이상 인용 받은 트윗</string>
    <string name="HetzerConditions_18">%1$s회 이하 인용 받은 트윗</string>
    <string name="HetzerConditions_19">%1$s회 이상 멘션 받은 트윗</string>
    <string name="HetzerConditions_20">%1$s회 이하 멘션 받은 트윗</string>
    <string name="HetzerConditions_5_Desc">마음이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_6_Desc">마음이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_7_Desc">리트윗이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_8_Desc">리트윗이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_11_Desc">어떤 키워드가 포함되었을 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_12_Desc">어떤 키워드가 포함되지 않았을 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_15_Desc">최근 몇 개 까지의 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_16_Desc">최근 몇 분 내에 작성한 트윗까지 남겨둘까요?</string>
    <string name="HetzerConditions_17_Desc">인용이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_18_Desc">인용이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_19_Desc">멘션이 몇 개 이상일 때 트윗을 남겨둘까요?</string>
    <string name="HetzerConditions_20_Desc">멘션이 몇 개 이하일 때 트윗을 남겨둘까요?</string>
    <string name="Error_NoParameter">인텐트 호출에 필요한 인자가 갖춰지지 않았습니다. 액티비티를 종료합니다.</string>
    <string name="Error_WrongParameter">인텐트 호출에 필요한 인자가 잘못되었습니다. 액티비티를 종료합니다.</string>
    <string name="TweetCleanerReport">트윗 청소기 보고서</string>
    <string name="TweetCleanerReportDesc">트윗 청소기가 삭제한 트윗들이에요.</string>
    <string name="DeletedTweetCount">삭제한 트윗 수 : %1$d</string>
    <string name="SavedTweetCount">남긴 트윗 수 : %1$d</string>
    <string name="FollowManagement">언팔매니저</string>
    <string name="FollowManagementDesc">나와 맞팔이 아닌 팔로잉 / 팔로워를 보아요.</string>
    <string name="duplicateService_Hetzer">트윗 청소기가 이미 실행중이에요!\n한 번에 하나의 청소기만 실행할 수 있어요.</string>
    <string name="duplicateService_ChainBlock">체인블락이 이미 실행중이에요!\n한 번에 하나만 실행할 수 있어요.</string>
    <string name="General">기본</string>
    <string name="TweetCleanerReports">트윗 청소기 보고서들</string>
    <string name="TouchToDetail">터치해서 자세히 볼 수 있어요!</string>
    <string name="TweetCleanerRun">트윗 청소기 실행하기</string>
    <string name="FollowManagementRun">언팔매니저 실행하기</string>
    <string name="Traitors">나를 맞팔하지 않은 트친</string>
    <string name="Fans">나를 구독하는 사람들</string>
    <string name="NoMatchedUsers">해당되는 유저가 없어요.</string>
    <string name="BlockUnblock">블언블</string>
    <string name="RemovedTweets">삭제된 트윗들</string>
    <string name="NoMatchedTweets">해당되는 트윗이 없어요.</string>
    <string name="SavedTweets">남겨진 트윗들</string>
    <string name="TouchToExpend">여기를 터치해서 접고 펼 수 있어요!</string>
    <string name="AnalyticsDone">트윗 일지가 완성되었어요!</string>
    <string name="TweetAnalyticsRun">일지 갱신하기</string>
    <string name="AnalyticsReport">트윗 일지</string>
    <string name="AnalyticsReports">지난 트윗 일지들</string>
    <string name="duplicateService_Analytics">트윗 일지가 이미 작성중이에요!\n한번에 하나의 일지만 작성할 수 있어요.</string>
    <string name="AnalyticsRunConfirm">정말 트윗일지를 기록할까요?</string>
    <string name="UserFetching">대상의 정보를 불러오고 있어요.</string>
    <string name="ChainBlockRunning">체인블락 작업을 시작할게요.</string>
    <string name="FetchingUser">유저 목록을 수집하는 중이에요 (현재 %1$d명)</string>
    <string name="Blocking">유저를 블락하는 중이에요. (%1$d/%2$d)</string>
    <string name="Unblocking">블락을 해제하는 중이에요. (%1$d/%2$d)</string>
    <string name="Service">트윗지기 서비스</string>
    <string name="PullingMe">내 정보를 불러오는 중이에요.</string>
    <string name="RateLimitWaiting">(API 한도 초기화 대기중)</string>
    <string name="TweetChecking">불러온 트윗들을 확인중이에요.</string>
    <string name="NoAnalyticsReports">트윗일지 실행 기록이 없어요.</string>
    <string name="NoHetzerReports">트윗 청소기 실행 이력이 없어요.</string>
    <string name="BlockCleanDone">블락 일괄 해제가 완료되었어요. %1$d건의 블락을 해제했어요.</string>
    <string name="BlockClearRunning">블락 일괄 해제 작업을 시작할게요.</string>
    <string name="SelectMoreThanOne">팔로잉과 팔로워 중 하나 이상의 대상을 선택해주세요!</string>
    <string name="IgnoreMyFollowing">내가 팔로잉하는 사람은 블락 대상에서 제외하기</string>
    <string name="Donate">개발자에게 기부하기</string>
    <string name="DonateDesc">개발자에게 기부하고 인앱 광고를 제거하세요.</string>
    <string name="duplicateService_BlockClear">블락 일괄 해제는 한 번에 하나만 실행할 수 있어요.</string>
    <string name="skuPostfix">(트윗지기)</string>
    <string name="Notice">알림</string>
    <string name="PurchaseHistoryRestored">구매 내역이 복원되었습니다!</string>
    <string name="Thanks">감사합니다!</string>
    <string name="Purchased">결제가 완료되었습니다.</string>
    <string name="tutorial_changeAccount">계정 변경하기</string>
    <string name="tutorial_changeAccountDesc">이곳을 클릭해서 트윗지기에 로그인한 계정을 바꿀 수 있어요!</string>
    <string name="HetzerRunning">트윗청소기가 실행되었어요.</string>
    <string name="Paid">결제 완료</string>
    <string name="RestorePayment">구매 내역 복원하기</string>
    <string name="RestorePaymentDesc">기존 구매 이력을 불러와요. 추가 과금은 되지 않아요!</string>
    <string name="PaymentFailed">결제에 실패했습니다.</string>
    <string name="PermissionDenied">파일 다운로드를 위해 저장소 접근을 허용해주세요!</string>
    <string name="DownloadStarted">다운로드가 시작되었습니다.</string>
    <string name="DownloadCompleted">다운로드가 완료되었습니다.</string>
    <string name="FetchingStatus">트윗을 가져오는 중입니다.</string>
    <string name="FetchingMedia">미디어를 저장하는 중입니다 (%1$d％)</string>
    <string name="MediaDownloader">미디어 다운로더</string>
    <string name="MediaDownloaderDescription">트윗에 포함된 이미지, GIF, 동영상을 다운로드해요.</string>
    <string name="MediaDownloaderGuide">미디어 다운로더는 트위터 앱에서 공유하기를 눌러 사용할 수도 있어요!</string>
    <string name="DownloaderUrlHint">다운로드할 트윗 URL</string>
    <string name="Download">다운로드</string>
    <string name="InvalidUrl">유효하지 않은 URL입니다. 트윗 URL을 입력해주세요.</string>
    <string name="StatusNotFound">트윗을 조회할 수 없었습니다. 올바른 URL이 입력되었는지, 트윗지기에 로그인한 계정이 해당 트윗을 볼 수 있는지 확인해주세요.</string>
    <string name="Converting">동영상을 GIF로 변환중이에요.</string>
    <string name="StoreUrl">https://play.google.com/store/apps/details?id=com.sasarinomari.tweeper</string>
    <string name="HetzerDoneTweet">트윗 청소 완료! 내가 원하는 트윗만 삭제가 완료되었어요. #트윗지기</string>
    <string name="AuthFailed">인증에 실패했습니다.</string>
    <string name="AgreeForTweeper">트윗지기 사용을 위해서 트위터 앱 인증 버튼을 눌러 주세요.</string>
    <string name="UncaughtError">알 수 없는 에러가 발생했습니다.</string>
    <string name="Sorry">죄송합니다.</string>
    <string name="NetworkError">네트워크 에러가 발생했습니다. 재시도 하시겠습니까?</string>
    <string name="BillingInfoFetchFailed">결제 정보를 불러오는데 실패했습니다.</string>
    <string name="ReconnectWaiting">네트워크 오류가 발생했습니다.</string>
    <string name="RetrySoon">잠시 후 재시도합니다.. (%1$d/%2$d회째)</string>
    <string name="StopWithNetworkError">네트워크 오류로 인해 작업이 중단되었습니다.</string>
    <string name="Whitelist">화이트리스트</string>
    <string name="Blacklist">블랙리스트</string>
    <string name="WhitelistDesc">기본적으로 모든 트윗을 삭제합니다.\n지정한 조건에 부합하는 트윗만 남깁니다.</string>
    <string name="BlacklistDesc">기본적으로 모든 트윗을 남깁니다.\n지정한 조건에 부합하는 트윗만 삭제합니다.</string>
    <string name="Condition_FavCount_Positive_Label">마음이 몇 개 이상일 때</string>
    <string name="Condition_FavCount_Negative_Label">마음이 몇 개 이하일 때</string>
    <string name="Condition_Label_Positive_Attachment">트윗을 남길까요?</string>
    <string name="Condition_Label_Negative_Attachment">트윗을 지울까요?</string>
    <string name="Condition_RetweetCount_Positive_Label">리트윗이 몇 개 이상일 때</string>
    <string name="Condition_RetweetCount_Negative_Label">리트윗이 몇 개 이하일 때</string>
</resources>