<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".chainb.BlockClearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/BlockClear"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/BlockClearDescriptipn"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginLeft="@dimen/listitem_horizontal_padding"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/listitem_horizontal_padding"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundrect_white_5dp"
        android:fontFamily="@font/noto_sans_light"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/Run"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

</LinearLayout>