<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".fwmanage.FollowManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/FollowManagement"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/FollowManagementDesc"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:paddingTop="16dp"
            android:paddingRight="14dp"
            android:paddingBottom="16dp">

            <com.sasarinomari.tweeper.OvalImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/chart_areaspline"
                app:ovalColor="#64b5f6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/noto_sans_regular"
                android:text="@string/FollowManagementRun"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/FollowManagementReports"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/TouchToDetail"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>