<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_title"
    android:orientation="vertical"
    tools:context=".Authenticate.TokenManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/TokenManagement"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/TokenManagementDetail"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_addContition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/listitem_horizontal_padding"
        android:paddingTop="@dimen/listitem_vertical_padding"
        android:paddingRight="@dimen/listitem_horizontal_padding"
        android:paddingBottom="@dimen/listitem_vertical_padding">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/plus_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/AddUser"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null" />

</LinearLayout>
