<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".hetzer.HetzerConditionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding">


        <TextView
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeleteOption"
            android:textSize="24sp" />

        <TextView
            style="@style/TextBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeleteOptionPlease" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/layout_scrollContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_addContition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/listitem_horizontal_padding"
                android:paddingTop="@dimen/listitem_vertical_padding"
                android:paddingRight="@dimen/listitem_horizontal_padding"
                android:paddingBottom="@dimen/listitem_vertical_padding">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@color/colorAccent" />

                <TextView
                    style="@style/TextBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/AddCondition" />
            </LinearLayout>

            <Button
                android:layout_marginTop="@dimen/listitem_vertical_padding"
                android:layout_marginBottom="@dimen/listitem_vertical_padding"
                android:layout_marginRight="@dimen/listitem_horizontal_padding"
                android:layout_marginLeft="@dimen/listitem_horizontal_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/OK" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>
