<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warning"
    android:orientation="vertical"
    tools:context=".ChainBlock.ChainBlockActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/Chainblock"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/noto_sans_light"
            android:text="@string/ChainblockDescription"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_input1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_next"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_ScreenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ScreenNameHint"
                android:inputType="text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/button_next"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/arrow_right_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_input1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/layout_second"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="14dp"
                    android:paddingTop="16dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/image_ProfilePicture"
                        android:layout_width="73dp"
                        android:layout_height="73dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/text_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/noto_sans_regular"
                        android:text="Name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/text_ScreenName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans_light"
                        android:text="'@ScreenName"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/text_Bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/noto_sans_light"
                        android:text="User's self description text."
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_light"
                                android:text="@string/Friend"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_FriendCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_bold"
                                android:text="1,000"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_light"
                                android:text="@string/Follower"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/text_FollowerCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/noto_sans_bold"
                                android:text="1,000"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans_regular"
                android:text="@string/ChainBlockWarning1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/ChainBlockWarning2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/button_next2"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_margin="30dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/arrow_right_circle" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>